--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,7 @@ body {
     display: inline-block;
     color: #ffffff;
     text-shadow: 0px 1px 5px #6c7add, 0px 1px 5px #ffffff, 0px 0px 2px #7db7ff, 1px 1px 0px #1beaff, 0px 0px 0px #20176d, 0px 0px 1px #17140b, 1px 1px 1px #ffffff, 2px 3px 1px #5245c3, 3px 3px 5px #45b9c5;
+    background-image: url('https://media.discordapp.net/attachments/987149728800198686/991834200309248070/sparkle.gif');
 }
 
 
